# uniswap-lens-rs

./: .gas-snapshot  .gitignore  Cargo.toml  README.md  foundry.toml  hardhat.config.ts  package.json
.github/workflows/: foundry.yml  publish.yml  rust.yml
artifacts/contracts/EphemeralAllPositionsByOwner.sol/: EphemeralAllPositionsByOwner.json
artifacts/contracts/EphemeralGetPopulatedTicksInRange.sol/: EphemeralGetPopulatedTicksInRange.json
artifacts/contracts/EphemeralGetPosition.sol/: EphemeralGetPosition.json
artifacts/contracts/EphemeralGetPositions.sol/: EphemeralGetPositions.json
artifacts/contracts/EphemeralPoolPositions.sol/: EphemeralPoolPositions.json
artifacts/contracts/EphemeralPoolSlots.sol/: EphemeralPoolSlots.json
contracts/: EphemeralGetPopulatedTicksInRange.sol  EphemeralPoolPositions.sol  EphemeralPoolSlots.sol  EphemeralPoolTickBitmap.sol  EphemeralPoolTicks.sol  PositionUtils.sol
src/: caller.rs  error.rs  lib.rs  pool_lens.rs  position_lens.rs  storage_lens.rs  tests.rs
src/bindings/: bitmath.rs  ephemeralallpositionsbyowner.rs  ephemeralgetpopulatedticksinrange.rs  ephemeralgetposition.rs  ephemeralgetpositions.rs  ephemeralpoolpositions.rs  ephemeralpoolslots.rs  ephemeralpooltickbitmap.rs  ephemeralpoolticks.rs  ephemeralstoragelens.rs  erc20caller.rs  fixedpoint96.rs  fixedpointmathlib.rs  fullmath.rs  icommonnonfungiblepositionmanager.rs  ierc165.rs  ierc20.rs  ierc20metadata.rs  ierc721.rs  ierc721enumerable.rs  ierc721metadata.rs  ierc721permit.rs  ierc721tokenreceiver.rs  iperipheryimmutablestate.rs  iperipherypayments.rs  ipoolinitializer.rs  islipstreamnonfungiblepositionmanager.rs  iuniswapv3factory.rs  iuniswapv3mintcallback.rs  iuniswapv3nonfungiblepositionmanager.rs  iuniswapv3pool.rs  iuniswapv3poolactions.rs  iuniswapv3poolderivedstate.rs  iuniswapv3poolevents.rs  iuniswapv3poolimmutables.rs  iuniswapv3poolowneractions.rs  iuniswapv3poolstate.rs  iuniswapv3swapcallback.rs  libbit.rs  liquidityamounts.rs  (+16 more)
src/viem/: poolLens.ts  storageLens.ts
test/foundry/: Base.t.sol  PoolLens.t.sol  PositionLens.t.sol  StorageLens.t.sol  TickLens.t.sol
test/hardhat/: univ3_test.ts
typechain/: hardhat.d.ts  index.ts
typechain/contracts/: EphemeralAllPositionsByOwner.ts  EphemeralGetPopulatedTicksInRange.ts  EphemeralGetPosition.ts  EphemeralGetPositions.ts  EphemeralPoolPositions.ts  EphemeralPoolSlots.ts  EphemeralPoolTickBitmap.ts  EphemeralPoolTicks.ts  EphemeralStorageLens.ts  PositionLens.ts  index.ts
typechain/factories/: index.ts
typechain/factories/contracts/: index.ts  (+10 more)
(+34 files in other folders)
