[package]
name = "uniswap-lens"
version = "0.3.0"
edition = "2021"
authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
description = "A library for querying Uniswap V3 using ephemeral lens contracts."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/shuhuiluo/uniswap-lens-rs"
keywords = ["alloy", "ethereum", "solidity", "uniswap"]
include = ["src/**/*.rs"]

[dependencies]
alloy = { version = "0.3", features = ["contract", "rpc-types"] }
anyhow = "1"
thiserror = { version = "1.0", optional = true }

[features]
default = []
std = ["alloy/std", "thiserror"]

[dev-dependencies]
alloy = { version = "0.3", features = ["transport-http"] }
dotenv = "0.15"
futures = "0.3"
once_cell = "1.19"
ruint = "1.12"
tokio = { version = "1", features = ["full"] }
