[package]
name = "uniswap-lens"
version = "0.6.0"
edition = "2021"
authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
description = "A library for querying Uniswap V3 using ephemeral lens contracts."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/shuhuiluo/uniswap-lens-rs"
keywords = ["alloy", "ethereum", "solidity", "uniswap"]
include = ["src/**/*.rs"]

[dependencies]
alloy = { version = "0.5", features = ["contract", "rpc-types"] }
anyhow = "1"
thiserror = { version = "2", default-features = false }

[features]
default = []
std = ["alloy/std", "thiserror/std"]

[dev-dependencies]
alloy = { version = "0.5", features = ["transport-http"] }
dotenv = "0.15"
futures = "0.3"
once_cell = "1.20"
ruint = "1.12"
tokio = { version = "1", features = ["full"] }
