[package]
name = "uniswap-lens"
version = "0.10.0"
edition = "2021"
authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
description = "A library for querying Uniswap V3 using ephemeral lens contracts."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/shuhuiluo/uniswap-lens-rs"
categories = ["cryptography::cryptocurrencies", "finance", "no-std"]
keywords = ["alloy", "ethereum", "solidity", "uniswap"]
include = ["src/**/*.rs"]

[dependencies]
alloy = { version = "0.9", features = ["contract", "json-rpc", "rpc-types"] }
thiserror = { version = "2", default-features = false }

[features]
default = []
std = ["alloy/std", "thiserror/std"]

[dev-dependencies]
alloy = { version = "0.9", features = ["transport-http"] }
dotenv = "0.15"
futures = "0.3"
once_cell = "1.20"
tokio = { version = "1", features = ["full"] }
